*** 19990818_1 by db
- backed out a change. You can't strcpy to a pointer without
  allocating memory. 



*** 19990817_2 by khuon
Ugh!  Seems sendto_prefix_one() accepts different args now.


*** 19990817_1 by lusky
fixed LIMIT_UH and IDLE_CHECK which were using old structs
revved patchlevel to b99


*** 19990816_1 by lusky
removed redundant "New highest connections" server notice
fixed SYSLOG_USERS bug (th)
discard broken DNS replies (th)
fixed IP mismatch check (th)
revved patchlevel to b98


*** 19990814_1 by lusky
small bug in packet.c in the byte counting code (th)


*** 19990812_1 by lusky
revved patchlevel to b97
ip hash function fix (th)


*** 19990811_1 by lusky
fake direction bug fix to send.c (th)
throttle accept errors in listener.c
oper motd rehash bug fix from perly
ensure that SERVER must come before SVINFO (jl)
unneed stropt.h include in s_bsd.c
neglected to detach_conf for umode -o (jl)


*** 19990810_1 by lusky
revved patchlevel to b96
fixed bug with NO_JOIN_ON_SPLIT on a coldstart
FLAGS_SPY was being checked against old flags in m_whois, its now umodes (db)
%lu screws up idle times as seen by a lot of scripts, notably bitchx (db)
added include for stdlib.h to mkpasswd.c
moved rcs Id into comments in fixklines.c


*** 19990809_2 by lusky
remove <sys/syslog.h> check from configure, assume <syslog.h> exists (sw)
cleaned up attach_Iline some more (db)


*** 19990809_1 by lusky
bumped patchlevel to b95
removed unneeded arg to attach_Iline and fixed tklines for non-resolving hosts
fixes to allow SLAVE_SERVER to work (db)
RPL_MYINFO should report the user modes and channel modes available (db)
missed the user mode +b for bots (db)
applied neph's operwall/wallops pacing patch (db)


*** 19990806_2 by lusky
updated patchlevel.h to b94 for new tarball


*** 19990806_1 by lusky
diane fixed another unkline bug.


*** 19990805_2 by lusky
fixed rehash dump, would core on bad admin line


*** 19990805_1 by lusky
bumped patchlevel for new tarball